# mosquitos

./: .gitignore  CMakeLists.txt  font_gen.py
reference/: links.txt
src/bootloader/: CMakeLists.txt
src/kernel/: CMakeLists.txt  kernel.c  kernel_common.h  util.c
src/kernel/drivers/: acpi.c  acpica_shim.c  apic.c  filesystem_tree.c  font.c  font.h  graphics.c  graphics.h  interrupt.c  interrupt.h  interrupt.s  keyboard_controller.c  pci.c  pci.h  random.c  text_output.c  text_output.h  timer.c  timer.h
src/kernel/drivers/filesystems/: mfs.c
src/kernel/drivers/pci_drivers/ahci/: ahci.c  ahci_internal.h  sata.c  satapi.c
src/kernel/memory/: kmalloc.c  virtual_memory.c
src/kernel/threading/: scheduler.c  scheduler.s
