PROJECT(mosquitos)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src")

set(ARCH x86_64)
set(EFI_INC "${CMAKE_SOURCE_DIR}/../gnu-efi-3.0.13/inc")
INCLUDE_DIRECTORIES(SYSTEM "${EFI_INC}" "${EFI_INC}/${ARCH}" "${EFI_INC}/protocol")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CONFIG_PATH ${CMAKE_SOURCE_DIR}/etc)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(CMAKE_C_FLAGS         "-DDEBUG -ffreestanding -std=gnu99 -Wall -Wextra -nostdlib -mno-red-zone -DEFI_FUNCTION_WRAPPER")
SET(CMAKE_C_FLAGS_DEBUG         "${CMAKE_C_FLAGS}")
SET(CMAKE_C_FLAGS_RELEASE       "${CMAKE_C_FLAGS} ")
SET(CMAKE_CPP_FLAGS_DEBUG       "${CMAKE_C_FLAGS} ")
SET(CMAKE_CPP_FLAGS_RELEASE     "${CMAKE_C_FLAGS} ")

SET(CMAKE_ASM_FLAGS "${CFLAGS} -x assembler-with-cpp")
enable_language(ASM)

ADD_DEFINITIONS(-D__LINUX__)
ADD_DEFINITIONS(-D_MOSQUITOS)
ADD_DEFINITIONS(-D_mosquitos_)

ADD_SUBDIRECTORY(src/kernel)
ADD_SUBDIRECTORY(src/bootloader)

